Remove architecture and deployment docs, update Dockerfiles and README
Deleted ARCHITECTURE.md, DEPLOYMENT.md, CONTRIBUTING.md, and SECURITY.md to consolidate documentation. Updated Dockerfile and Dockerfile.dev to support configurable Node.js version via build argument NODE_VERSION. Enhanced README.md with expanded quick start, usage, configuration, security, performance, deployment, and troubleshooting sections. Minor updates to docker-compose.yml and docker-compose.dev.yml for consistency.

--- a/Dockerfile.dev
+++ b/Dockerfile.dev
@@ -3,7 +3,10 @@
 # Optimized for hot reload and debugging
 # ============================================
 
-FROM node:20-alpine
+# Node.js version
+ARG NODE_VERSION=20
+
+FROM node:${NODE_VERSION}-alpine
 
 # Install development dependencies
 RUN apk add --no-cache libc6-compat git
