--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -191,3 +191,29 @@ jobs:
 
       - name: Analyze image layers
         run: docker history nextjs-app:size
+
+  release:
+    name: Auto tag & release
+    needs : image-size
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
+
+      - name: Bump tag automatically
+        id: tag
+        uses: anothrNick/github-tag-action@1.71.0
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          DEFAULT_BUMP: patch
+          WITH_V: true      
+          RELEASE_BRANCHES: main
+
+      - name: Create GitHub Release
+        uses: softprops/action-gh-release@v2
+        if: steps.tag.outputs.new_tag != ''
+        with:
+          tag_name: ${{ steps.tag.outputs.new_tag }}
+          generate_release_notes: true
