Add workflow permissions and build workflow docs
Set 'contents: write' permissions in docker-build workflow. Updated README with workflow usage instructions and added a build workflow diagram image.

--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -9,6 +9,9 @@ on:
     # Run security scan weekly
     - cron: '0 0 * * 0'
 
+permissions:
+  contents: write
+
 env:
   REGISTRY: ghcr.io
   IMAGE_NAME: ${{ github.repository }}
