Update Docker workflow triggers and README example
Replaced push and schedule triggers with workflow_dispatch in docker-build.yml for manual workflow runs. Fixed README workflow example to use wget for downloading the workflow file.

--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -1,13 +1,10 @@
 name: Docker Build and Security Scan
 
 on:
-  push:
-    branches: [ main, develop ]
   pull_request:
     branches: [ main ]
-  schedule:
-    # Run security scan weekly
-    - cron: '0 0 * * 0'
+
+workflow_dispatch:
 
 permissions:
   contents: write
