--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -195,11 +195,14 @@ jobs:
     name: Auto tag & release
     needs : image-size
     runs-on: ubuntu-latest
+    permissions:
+      contents: write
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
         with:
           fetch-depth: 0
+          token: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Bump tag automatically
         id: tag
@@ -209,6 +212,8 @@ jobs:
           DEFAULT_BUMP: patch
           WITH_V: true      
           RELEASE_BRANCHES: main
+          PRERELEASE: false
+          INITIAL_VERSION: 0.0.1
 
       - name: Create GitHub Release
         uses: softprops/action-gh-release@v2
@@ -216,3 +221,4 @@ jobs:
         with:
           tag_name: ${{ steps.tag.outputs.new_tag }}
           generate_release_notes: true
+          prerelease: false
