--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -1,6 +1,8 @@
 name: Docker Build and Security Scan
 
 on:
+  push:
+    branches: [ main ]
   pull_request:
     branches: [ main ]
   workflow_dispatch:
@@ -70,7 +72,7 @@ jobs:
           labels: ${{ steps.meta.outputs.labels }}
           cache-from: type=gha
           cache-to: type=gha,mode=max
-          platforms: linux/amd64,linux/arm64
+          platforms: linux/amd64
 
   # Security scanning
   security-scan:
@@ -78,7 +80,7 @@ jobs:
     needs: build
     permissions:
       contents: read
-      security-events: write
+      actions: read
 
     steps:
       - name: Checkout code
@@ -91,26 +93,23 @@ jobs:
         uses: aquasecurity/trivy-action@master
         with:
           image-ref: 'nextjs-app:scan'
-          format: 'sarif'
-          output: 'trivy-results.sarif'
+          format: 'table'
           severity: 'CRITICAL,HIGH'
+          exit-code: '1'
 
-      - name: Upload Trivy results to GitHub Security
-        uses: github/codeql-action/upload-sarif@v3
-        if: always()
-        with:
-          sarif_file: 'trivy-results.sarif'
-
-      - name: Run Trivy in table format
+      - name: Run Trivy JSON output for artifact
         uses: aquasecurity/trivy-action@master
         with:
           image-ref: 'nextjs-app:scan'
-          format: 'table'
+          format: 'json'
+          output: 'trivy-results.json'
           severity: 'CRITICAL,HIGH'
+          exit-code: '1'
 
   # Dependency audit
   audit:
     runs-on: ubuntu-latest
+    needs : security-scan
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
@@ -124,11 +123,11 @@ jobs:
         run: npm ci
 
       - name: Run npm audit
-        continue-on-error: true
         run: npm audit --audit-level=high
 
       - name: Check for outdated packages
         run: npm outdated || true
+
 
   # Performance test
   performance:
@@ -166,7 +165,7 @@ jobs:
   # Image size check
   image-size:
     runs-on: ubuntu-latest
-    needs: build
+    needs: performance
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
@@ -193,7 +192,7 @@ jobs:
 
   release:
     name: Auto tag & release
-    needs : image-size
+    needs : audit
     runs-on: ubuntu-latest
     permissions:
       contents: write
