--- a/package.json
+++ b/package.json
@@ -35,5 +35,9 @@
   "engines": {
     "node": ">=18.0.0",
     "npm": ">=9.0.0"
+  },
+  "overrides": {
+    "cross-spawn": "7.0.5",
+    "glob": "10.5.0"
   }
 }
