--- a/package.json
+++ b/package.json
@@ -26,8 +26,10 @@
     "@types/react": "^18.2.45",
     "@types/react-dom": "^18.2.18",
     "autoprefixer": "^10.4.16",
+    "cross-spawn": "7.0.5",
     "eslint": "^8.56.0",
     "eslint-config-next": "14.2.35",
+    "glob": "10.5.0",
     "postcss": "^8.4.32",
     "tailwindcss": "^3.3.6",
     "typescript": "^5.3.3"
