--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "autoprefixer": "^10.4.16",
     "cross-spawn": "7.0.5",
     "eslint": "^8.56.0",
-    "eslint-config-next": "14.2.35",
+    "eslint-config-next": "^16.1.0",
     "glob": "10.5.0",
     "postcss": "^8.4.32",
     "tailwindcss": "^3.3.6",
@@ -37,9 +37,5 @@
   "engines": {
     "node": ">=18.0.0",
     "npm": ">=9.0.0"
-  },
-  "overrides": {
-    "cross-spawn": "7.0.5",
-    "glob": "10.5.0"
   }
 }
