--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
+    "postinstall": "node scripts/patch-next.js",
     "docker:build": "docker build -t nextjs-app:latest .",
     "docker:build:dev": "docker build -f Dockerfile.dev -t nextjs-app:dev .",
     "docker:run": "docker run -p 3000:3000 nextjs-app:latest",
@@ -26,10 +27,8 @@
     "@types/react": "^18.2.45",
     "@types/react-dom": "^18.2.18",
     "autoprefixer": "^10.4.16",
-    "cross-spawn": "7.0.5",
-    "eslint": "^8.56.0",
-    "eslint-config-next": "^16.1.0",
-    "glob": "10.5.0",
+    "eslint": "8.57.1",
+    "eslint-config-next": "14.2.35",
     "postcss": "^8.4.32",
     "tailwindcss": "^3.3.6",
     "typescript": "^5.3.3"
@@ -37,5 +36,9 @@
   "engines": {
     "node": ">=18.0.0",
     "npm": ">=9.0.0"
+  },
+  "overrides": {
+    "cross-spawn": "7.0.5",
+    "glob": "10.5.0"
   }
 }
