--- a/package.json
+++ b/package.json
@@ -8,7 +8,6 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "postinstall": "node scripts/patch-next.js",
     "docker:build": "docker build -t nextjs-app:latest .",
     "docker:build:dev": "docker build -f Dockerfile.dev -t nextjs-app:dev .",
     "docker:run": "docker run -p 3000:3000 nextjs-app:latest",
@@ -27,7 +26,7 @@
     "@types/react": "^18.2.45",
     "@types/react-dom": "^18.2.18",
     "autoprefixer": "^10.4.16",
-    "eslint": "8.57.1",
+    "eslint": "^8.56.0",
     "eslint-config-next": "14.2.35",
     "postcss": "^8.4.32",
     "tailwindcss": "^3.3.6",
